@@ -20,7 +20,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <curses.h>
-#include <term.h>
+/* #include <term.h> */
 #include <X11/Xlib.h>
 #include <X11/Xutil.h>
 #include <X11/cursorfont.h>
