@@ -1,3 +1,5 @@
+  - bugfixes in color handling
+
   - added a "Linux Console" color-entry.
 
   - Now kvt searches a list of TERM-entries and takes the first
